# FreelancerLib

./: CMakeLists.txt  README.md
include/: FreelancerLib.hpp  UTF.hpp  UTFNode.hpp
src/: UTF.cpp
